SalesforceData/src/objects/Role__c.object
<CustomObject>
    <fields>
        <fullName>Employee_Role__c</fullName>
        <label>Employee Role</label>
        <picklist>
            <picklistValues>
                <fullName>Developer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Project  Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Solution Architect</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sr. Developer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Technical Lead</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Name__c</fullName>
        <label>Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Role_Description__c</fullName>
        <label>Role Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Role_EMPLOYEE__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Role_EMPLOYEE</label>
        <referenceTo>EMPLOYEE__c</referenceTo>
        <relationshipLabel>Roles</relationshipLabel>
        <relationshipName>RolesEmp</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Role</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Role Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Roles</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>